--- a/isteven-omni-bar.css
+++ b/isteven-omni-bar.css
@@ -16,7 +16,7 @@
 
 .currentValue {
     position: absolute;
-    left: 0px;
+    left: 0;
     z-index: 1;    
     height: 100%;
     border-radius: 5px;
